# miner

./: CMakeLists.txt  README.md
scripts/: prep-aarch64.sh  win-install.bat
src/: CMakeLists.txt
src/ArgonVariants/: Argon2Hash.cpp  Argon2Hash.h  Variants.h
src/Backend/: CMakeLists.txt  IBackend.h
src/Backend/CPU/: CMakeLists.txt  CPU.cpp  CPU.h
src/Backend/Nvidia/: CMakeLists.txt  Nvidia.cpp  Nvidia.h  NvidiaHash.cpp  NvidiaHash.h  NvidiaUtils.cu  NvidiaUtils.h
src/Config/: CMakeLists.txt  Config.cpp  Config.h  Constants.h
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/Miner/: CMakeLists.txt  GetConfig.cpp  GetConfig.h  main.cpp
src/MinerManager/: HashManager.cpp  HashManager.h  MinerManager.cpp  MinerManager.h
src/PoolCommunication/: CMakeLists.txt  PoolCommunication.cpp  PoolCommunication.h
src/Types/: HashDevice.h  JobSubmit.h  PerformanceStats.h  Pool.h  PoolMessage.cpp  PoolMessage.h
src/Utilities/: CMakeLists.txt  GetChar.cpp  GetChar.h  String.cpp  String.h
